fix: fixed content overflowing and being hidden

--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -1,7 +1,6 @@
 .container{
     display: grid;
-    grid-template-rows: auto 1fr auto;   
-    overflow: hidden;   
+    grid-template-rows: 1fr 1fr 1fr;     
     height: 100vh;
     @media #{$md-xl}{grid-template-columns: 0.3fr 1fr;}  
 }
