--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,7 +2,6 @@
   background: $band-background;
   width: 100%;
   background-size: cover;
-  height: 40vh;
   position: relative;
 
   @media #{$sm} { height: 50vh;}
